// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`over memory > 1-depth > 2-way > connected > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`over memory > 1-depth > 2-way > connected > equivalent 2`] = `
{
  "a": "B",
}
`;

exports[`over memory > 1-depth > 2-way > connected, deletion > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`over memory > 1-depth > 2-way > connected, deletion > equivalent 2`] = `{}`;

exports[`over memory > 1-depth > 2-way > connected, initial > equivalent 1`] = `{}`;

exports[`over memory > 1-depth > 2-way > connected, near atom > equivalent 1`] = `
{
  "a": "A",
  "b": "B",
}
`;

exports[`over memory > 1-depth > 2-way > disconnected, conflicting values > equivalent 1`] = `
{
  "a": "B",
}
`;

exports[`over memory > 1-depth > 2-way > disconnected, near atom > equivalent 1`] = `
{
  "a": "A",
  "b": "B",
}
`;

exports[`over memory > 1-depth > 2-way > set 1, set 2, start 2, start 1 > differing 1`] = `
[
  {
    "a": "A",
  },
  {},
]
`;

exports[`over memory > 1-depth > 2-way > set 1, set 2, start 2, start 1 > differing 2`] = `
[
  {
    "a": "A",
  },
  {
    "a": "B",
  },
]
`;

exports[`over memory > 1-depth > 2-way > set 1, set 2, start 2, start 1 > equivalent 1`] = `
{
  "a": "B",
}
`;

exports[`over memory > 1-depth > 2-way > start 1, set 1, start 2 > differing 1`] = `
[
  {
    "a": "A",
  },
  {},
]
`;

exports[`over memory > 1-depth > 2-way > start 1, set 1, start 2 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`over memory > 1-depth > 2-way > start 2, set 1, start 1 > differing 1`] = `
[
  {
    "a": "A",
  },
  {},
]
`;

exports[`over memory > 1-depth > 2-way > start 2, set 1, start 1 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`over memory > 1-depth > 2-way > stop 1, set 1, start 1 > differing 1`] = `
[
  {
    "a": "B",
  },
  {
    "a": "A",
  },
]
`;

exports[`over memory > 1-depth > 2-way > stop 1, set 1, start 1 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`over memory > 1-depth > 2-way > stop 1, set 1, start 1 > equivalent 2`] = `
{
  "a": "B",
}
`;

exports[`over memory > 1-depth > 2-way > stop 1, set 2, start 1 > differing 1`] = `
[
  {
    "a": "A",
  },
  {
    "a": "B",
  },
]
`;

exports[`over memory > 1-depth > 2-way > stop 1, set 2, start 1 > equivalent 1`] = `
{
  "a": "A",
}
`;

exports[`over memory > 1-depth > 2-way > stop 1, set 2, start 1 > equivalent 2`] = `
{
  "a": "B",
}
`;

exports[`over memory > 1-depth > 3-way > chain > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`over memory > 1-depth > 3-way > chain > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`over memory > 1-depth > 3-way > chain > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`over memory > 1-depth > 3-way > pool > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`over memory > 1-depth > 3-way > pool > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`over memory > 1-depth > 3-way > pool > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`over memory > 1-depth > 3-way > ring > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`over memory > 1-depth > 3-way > ring > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`over memory > 1-depth > 3-way > ring > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`over memory > 1-depth > 10-way > chain > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`over memory > 1-depth > 10-way > chain > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`over memory > 1-depth > 10-way > chain > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`over memory > 1-depth > 10-way > chain > equivalent 4`] = `
{
  "a": "A4",
}
`;

exports[`over memory > 1-depth > 10-way > chain > equivalent 5`] = `
{
  "a": "A5",
}
`;

exports[`over memory > 1-depth > 10-way > chain > equivalent 6`] = `
{
  "a": "A6",
}
`;

exports[`over memory > 1-depth > 10-way > chain > equivalent 7`] = `
{
  "a": "A7",
}
`;

exports[`over memory > 1-depth > 10-way > chain > equivalent 8`] = `
{
  "a": "A8",
}
`;

exports[`over memory > 1-depth > 10-way > chain > equivalent 9`] = `
{
  "a": "A9",
}
`;

exports[`over memory > 1-depth > 10-way > chain > equivalent 10`] = `
{
  "a": "A10",
}
`;

exports[`over memory > 1-depth > 10-way > pool > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`over memory > 1-depth > 10-way > pool > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`over memory > 1-depth > 10-way > pool > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`over memory > 1-depth > 10-way > pool > equivalent 4`] = `
{
  "a": "A4",
}
`;

exports[`over memory > 1-depth > 10-way > pool > equivalent 5`] = `
{
  "a": "A5",
}
`;

exports[`over memory > 1-depth > 10-way > pool > equivalent 6`] = `
{
  "a": "A6",
}
`;

exports[`over memory > 1-depth > 10-way > pool > equivalent 7`] = `
{
  "a": "A7",
}
`;

exports[`over memory > 1-depth > 10-way > pool > equivalent 8`] = `
{
  "a": "A8",
}
`;

exports[`over memory > 1-depth > 10-way > pool > equivalent 9`] = `
{
  "a": "A9",
}
`;

exports[`over memory > 1-depth > 10-way > pool > equivalent 10`] = `
{
  "a": "A10",
}
`;

exports[`over memory > 1-depth > 10-way > ring > equivalent 1`] = `
{
  "a": "A1",
}
`;

exports[`over memory > 1-depth > 10-way > ring > equivalent 2`] = `
{
  "a": "A2",
}
`;

exports[`over memory > 1-depth > 10-way > ring > equivalent 3`] = `
{
  "a": "A3",
}
`;

exports[`over memory > 1-depth > 10-way > ring > equivalent 4`] = `
{
  "a": "A4",
}
`;

exports[`over memory > 1-depth > 10-way > ring > equivalent 5`] = `
{
  "a": "A5",
}
`;

exports[`over memory > 1-depth > 10-way > ring > equivalent 6`] = `
{
  "a": "A6",
}
`;

exports[`over memory > 1-depth > 10-way > ring > equivalent 7`] = `
{
  "a": "A7",
}
`;

exports[`over memory > 1-depth > 10-way > ring > equivalent 8`] = `
{
  "a": "A8",
}
`;

exports[`over memory > 1-depth > 10-way > ring > equivalent 9`] = `
{
  "a": "A9",
}
`;

exports[`over memory > 1-depth > 10-way > ring > equivalent 10`] = `
{
  "a": "A10",
}
`;
